<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/country_image_dialog"
        android:layout_width="match_parent"
        android:layout_height="174dp"
        android:contentDescription="@string/recebe_uma_imagem_do_pa_s_em_quest_o"
        android:scaleType="centerCrop"
        tools:src="@drawable/uk" />

    <TextView
        android:id="@+id/image_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textSize="16sp"
        tools:text="Tower bridge - London, United Kingdom" />

    <TextView
        android:id="@+id/author_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"
        android:textAlignment="center"
        android:textSize="16sp"
        tools:text="Autor: Giuseppe Milo" />

    <TextView
        android:id="@+id/creative_commons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"
        android:text="@string/creative_commons"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/link_image_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:layout_marginHorizontal="55dp"
        android:textColor="#416AA7"
        android:foreground="?selectableItemBackgroundBorderless"
        android:text="@string/abrir_imagem"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_ok"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/ok"
        android:foreground="?selectableItemBackgroundBorderless"
        android:textColor="#FFFF9A41"
        android:textSize="14sp" />
</LinearLayout>